added second example of multi model query
